--- a/pom.xml
+++ b/pom.xml
@@ -9,33 +9,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <repositories>
-    <repository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>
-        https://oss.sonatype.org/content/repositories/snapshots
-      </url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>mulesoft</id>
-      <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
-    </repository>
-  </repositories>
-
   <dependencies>
     <dependency>
       <groupId>com.sikulix</groupId>
       <artifactId>sikulixapi</artifactId>
-      <version>1.1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.vidstige</groupId>
-      <artifactId>jadb</artifactId>
-      <version>-v1.0-g94ebf38-23</version>
+      <version>2.0.5</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -46,6 +24,12 @@
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-junit</artifactId>
       <version>2.0.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>MySikuliExample</groupId>
+      <artifactId>MySikuliExample</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
